--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,17 @@ body {
     background-color: aquamarine;
 }
 
+p {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+@media only screen and (min-width: 600px) {
+    p {
+        margin-left: 25%;
+        margin-right:25%;
+    }
+}
 @media only screen and (max-width: 1000px) {
     body {
         background-color: slateblue
@@ -25,6 +36,10 @@ body {
         background-color: lime;
     }
 }
+
+
+
+
 
 
 
